--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ cryptography==3.4.7
 defusedxml==0.7.1
 distlib==0.3.2
 Django==3.2
+django-cors-headers==3.8.0
 django-filter==2.4.0
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
 filelock==3.0.12
 idna==2.10
 memory-profiler==0.58.0
@@ -20,6 +22,7 @@ Pillow==8.2.0
 psutil==5.8.0
 pycparser==2.20
 PyJWT==2.1.0
+python-dotenv==0.19.0
 python3-openid==3.2.0
 pytz==2021.1
 PyYAML==5.4.1
@@ -30,5 +33,6 @@ social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+typing==3.7.4.3
 urllib3==1.26.4
 virtualenv==20.4.7
