--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-appdirs==1.4.4
-asgiref==3.3.4
+appdirs
+asgiref
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2020.12.5
+certifi
 cffi==1.14.5
 chardet==4.0.0
+coreapi
 cryptography==3.4.7
 defusedxml==0.7.1
 distlib==0.3.2
@@ -13,6 +14,8 @@ django-cors-headers==3.8.0
 django-filter==2.4.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+graphene
+graphene-django
 filelock==3.0.12
 idna==2.10
 memory-profiler==0.58.0
